[package]
name = "ajaya-router"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Radix trie router for the Ajaya web framework"

[dependencies]
ajaya-core     = { workspace = true }
http           = { workspace = true }
bytes          = { workspace = true }
http-body      = { workspace = true }
http-body-util = { workspace = true }
futures-util   = { workspace = true }
tracing        = { workspace = true }
