[package]
name = "ajaya"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Ajaya (अजय) — The Unconquerable Rust Web Framework"

[dependencies]
ajaya-core    = { workspace = true }
ajaya-hyper   = { workspace = true }
ajaya-router  = { workspace = true }
ajaya-extract = { workspace = true }
tokio         = { workspace = true }
http          = { workspace = true }
bytes         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }

